--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -5,14 +5,15 @@
 
 .text {
   font-size: 20px;
-  margin-right: 20px;
+
+  margin: 0;
 }
 
 .Btn {
   margin-left: 10px;
   width: 80px;
   height: 20px;
-  padding: 3px;
+
   border: none;
   border-radius: 5px;
   background-color: rgb(143, 100, 146);
